# example_pkg

./: .gitignore  CHANGES.md  MANIFEST.in  README.md  build.sh  clean.sh  install.sh  requirements.txt  setup.cfg  setup.py  tests.sh  uninstall.sh  upload.sh
docs/plugins/: slack_plugin.md  testresultscollector.md  zabbix.md
src/tiden/: __init__.py  __version__.py  ansiblepool.py  artifact_repository.py  artifacts.py  assertions.py  configuration_decorator.py  dockermanager.py  error_maker.py  generators.py  hookspecs.py  ignite.py  localpool.py  logger.py  nasmanager.py  priority_decorator.py  result.py  runner.py  singleton.py  sshpool.py  stress.py  testconfig.py  tidenconfig.py  tidenexception.py  tidenfabric.py  tidenhooks.py  tidenplugin.py  tidenpluginmanager.py  tidenrunner.py  util.py  xmlconfigbuilder.py  zabbix_api.py  zookeeper.py
src/tiden/apps/: __init__.py  app.py  appconfigbuilder.py  appexception.py  appfactory.py  appscontainer.py  nodestatus.py
src/tiden/apps/ignite/: ignite.py  (+5 more)
src/tiden/case/: __init__.py  apptestcase.py  generaltestcase.py
src/tiden/console/: main.py
src/tiden/plugins/: dockercleaner.py  envexpander.py  ftpdownloader.py  hoststat.py  javakiller.py  serversharecheck.py  servertimediff.py  slack_plugin.py  testresultscollector.py  wardreport.py  zabbix.py
src/tiden/report/: steps.py
src/tiden/utilities/: __init__.py  control_utility.py  sqlline_utility.py
tests/: conftest.py  test_class_dec.py  test_control_utility.py  test_env_expander.py  test_exchanges_info.py  test_gen_permutations.py  test_ignite_app.py  test_localpool.py  test_merge_report.py  test_prepare_artifacts.py  test_priority_dec.py  test_re.py  test_runner.py  test_tiden_config.py  test_tiden_fabric.py  test_tiden_hook.py  test_tiden_testcase.py  tiden_sanity.groovy
(+52 files in other folders)
