[metadata]
name = tiden
license_files = LICENSE.txt
author = GridGain Systems
author_email = pypi@gridgain.com
description = Testing Ignite in Distributed Environments
long_description = file: README.md
long_description_content_type = text/markdown
keywords = testing
license = Apache Software License
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux


install_requires =
  requests
  paramiko
